--- a/first website/index.html
+++ b/first website/index.html
@@ -1,31 +1,39 @@
-<HTML>
-<HEAD><H1 align="center"><B>Pollution</B><BR><HR>
-<TITLE>Pollution and its types</TITLE>
-</HEAD>
-<BODY bgcolor="#FFFFFF">
-<H1><FONT size=7>W</FONT>hen there are some physical, chemical or biological changes occur in our physical envionment it is known as <I><U>pollution</U></I>.
-The substances which brings these changes are known as <I><U>pollutants</U></I>.The sources for the pollution can be natural or 
-man-made.<BR>
-<IMG src="Pollution.jpg" align=right height=200 width=200 >
-<TABLE border=2 align=center cellpadding=4>
-      <TR><TH colspan=2>Affection to people by pollution</TH></TR>
-      <TR>
-           <TH>People affected by air pollution</TH>
-          <TH>119563 approx.</TH>
-       </TR>
-       <TR>
-           <TH>People affected by water pollution</TH>
-           <TH>1266730 approx.</TH>
-       </TR> 
-       <TR>
-           <TH>People affected by noise pollution</TH>
-           <TH>264730 approx.</TH>
-       </TR>
-</TABLE>
-<H1>These are the following the types of Environmental pollution:-
-<!--types of pollution-->
-<OL><LI><A href="Air pollution.html"> Air pollution </A>
-<LI><A href="Water pollution.html">Water pollution</A>
-<LI><A href="Noise pollution.html">Noise pollution</A></OL></H1>
-</BODY>
-</HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body bgcolor="#FFFFFF">
+   
+    <HEAD><H1 align="center"><B>Pollution</B><BR><HR>
+
+        <H1><FONT size=7>W</FONT>hen there are some physical, chemical or biological changes occur in our physical envionment it is known as <I><U>pollution</U></I>.
+        The substances which brings these changes are known as <I><U>pollutants</U></I>.The sources for the pollution can be natural or 
+        man-made.<BR>
+        <IMG src="Pollution.jpg" align=right height=200 width=200 >
+        <TABLE border=2 align=center cellpadding=4>
+              <TR><TH colspan=2>Affection to people by pollution</TH></TR>
+              <TR>
+                   <TH>People affected by air pollution</TH>
+                  <TH>119563 approx.</TH>
+               </TR>
+               <TR>
+                   <TH>People affected by water pollution</TH>
+                   <TH>1266730 approx.</TH>
+               </TR> 
+               <TR>
+                   <TH>People affected by noise pollution</TH>
+                   <TH>264730 approx.</TH>
+               </TR>
+        </TABLE>
+        <H1>These are the following the types of Environmental pollution:-
+        <!--types of pollution-->
+        <OL><LI><A href="Air pollution.html"> Air pollution </A>
+        <LI><A href="Water pollution.html">Water pollution</A>
+        <LI><A href="Noise pollution.html">Noise pollution</A></OL></H1>
+        
+</body>
+</html>
